--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --exec babel-node server.js",
-    "run dev": "knex:migrate latest && knex:seed run"
+    "dev": "knex migrate:latest && knex seed:run"
   },
   "keywords": [],
   "author": "",
